# nuclease

./: .gitignore  BBDuk2.java  Cargo.toml  README.md  dhat-heap.json  matched.fq  rust-duk.sh  rustduk.sh
in/: 10_121.fa  10_121.fq  10k_150.fa  1_50.fq  1_ref.fa  queries.fq  references.fa
input/: reads.fq  refs.fasta  tests.fastq
src/: core.rs  cuttle_test.rs  cuttlefish.rs  duk.rs  duk_index.rs  duk_old.rs  duk_single.rs  kmer.rs  kmer_ops.rs  kmer_processor.rs  lib.rs  main.rs  proto_duk.rs  r_and_d.rs  rust_duk.rs  test.rs  test2.rs
tests/: integrations.rs  units.rs
