[package]
name = "nuclease"
version = "1.0.0"
edition = "2024"


[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
needletail = "0.6.3"
rustc-hash = "2.1.1"
rayon = "1.11.0"
bincode = "2.0.1"
wide = "0.7.33"
num_cpus = "1.17.0"
sysinfo = "0.37.0"
bytesize = "2.0.1"
libc = "0.2.175"
